# Coa

./: .gitmodules  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/Coa/Coa/: CMakeLists.txt
src/Coa/Coa/ECS/: ComponentDatabase.h  Components.cpp  Components.h  ConsistentComponentVector.h  Entity.cpp  Entity.h  Entity.tpp  Scene.cpp  Scene.h  Scene.tpp  TypeAliases.h
src/Coa/Coa/ECS/Components/: CameraComponent.h  ColorComponent.h  Component.cpp  Component.h  ComponentEntity.h  DestroyEntityComponent.h  LightComponent.h  MeshComponent.cpp  MeshComponent.h  ScriptComponent.cpp  ScriptComponent.h  SkyboxComponent.h  TagComponent.h  TextureComponent.h  TransformComponent.h
src/Coa/Coa/Systems/: Engine.cpp  Engine.h  ISystem.cpp  ISystem.h  RenderingSystem.cpp  RenderingSystem.h  SceneManagementSystem.cpp  SceneManagementSystem.h  ScriptingSystem.cpp  ScriptingSystem.h
src/Coa/Coa/Utility/: ConsistentVector.h  IterableVector.h  SharedLibrary.cpp  SharedLibrary.h
src/Demo/: CMakeLists.txt  DemoApplication.cpp  DemoApplication.h  main.cpp
src/Demo/Scripts/: CameraMovementScript.cpp  CameraMovementScript.h  LightIntensityChangeScript.cpp  LightIntensityChangeScript.h  MainLightScript.cpp  MainLightScript.h
